chopping away at the login flow

--- a/res/layout/login_page_1.xml
+++ b/res/layout/login_page_1.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="top"
     android:orientation="vertical"
     android:paddingLeft="@dimen/login_padding_horizontal"
@@ -12,7 +12,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login_page_four_body"
+        android:text="@string/login_page_one_body"
         style="@style/LoginBody" />
 
 </LinearLayout>
