--- a/res/layout/login_page_3.xml
+++ b/res/layout/login_page_3.xml
@@ -3,39 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:gravity="top"
     android:orientation="vertical"
     android:paddingLeft="@dimen/login_padding_horizontal"
     android:paddingRight="@dimen/login_padding_horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:gravity="bottom"
-        android:layout_marginBottom="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_page_three_title"
-            style="@style/LoginTitle" />
-
-        <TextView
-            android:id="@+id/body"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_page_three_body"
-            style="@style/LoginBody" />
-
-        <TextView
-            android:id="@+id/learn_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_page_three_learn_more"
-            style="@style/LoginLink" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login_page_three_body"
+        style="@style/LoginBody" />
 
 </LinearLayout>
