--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/white">
 
-    <include
-        android:id="@+id/splash"
-        layout="@layout/login_header" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="180dp"
+        android:contentDescription="@string/logo_description"
+        android:src="@drawable/ic_open_logo" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible" />
+        android:layout_height="200dp"
+        android:layout_marginTop="60dp" />
 
     <com.viewpagerindicator.CirclePageIndicator
         android:id="@+id/view_pager_indicator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/vpi_height"
-        android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/vpi_margin_bottom"
         android:padding="@dimen/vpi_padding"
-        android:visibility="visible"
         app:fillColor="@color/vpi_fill_color"
         app:pageColor="@color/vpi_page_color"
         app:strokeColor="@color/vpi_stroke_color"
         app:radius="@dimen/vpi_radius"
         app:strokeWidth="@dimen/vpi_stroke_width" />
 
-</RelativeLayout>
+</LinearLayout>
