--- a/res/layout/login_page_4.xml
+++ b/res/layout/login_page_4.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="top"
@@ -8,11 +8,43 @@
     android:paddingLeft="@dimen/login_padding_horizontal"
     android:paddingRight="@dimen/login_padding_horizontal">
 
-    <TextView
-        android:id="@+id/title"
+    <Button
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login_page_four_body"
-        style="@style/LoginBody" />
+        android:layout_alignParentBottom="true"
+        android:paddingLeft="@dimen/button_side_padding"
+        android:paddingRight="@dimen/button_side_padding"
+        android:paddingTop="@dimen/button_above_below_padding"
+        android:paddingBottom="@dimen/button_above_below_padding"
+        android:text="@string/login_button"
+        android:textColor="@android:color/white"
+        android:fontFamily="sans-serif-condensed"
+        android:background="@drawable/signin_button"
+        android:layout_marginBottom="40dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="@dimen/button_font_size" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:layout_marginBottom="15dp"
+        android:layout_above="@id/login_button">
+        <CheckBox
+            android:id="@+id/agree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/default_padding"/>
+        <TextView
+            android:id="@+id/terms_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="@string/login_accept_terms"
+            android:clickable="true"
+            style="@style/LoginTerms" />
+    </LinearLayout>
+
+</RelativeLayout>
