Make login UI less broken for really small screens and really big screens

--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,22 +11,17 @@
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="180dp"
+        android:layout_centerInParent="true"
+        android:paddingBottom="48dp"
         android:contentDescription="@string/logo_description"
         android:src="@drawable/ic_open_logo" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="60dp" />
 
     <com.viewpagerindicator.CirclePageIndicator
         android:id="@+id/view_pager_indicator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/vpi_height"
         android:layout_marginBottom="@dimen/vpi_margin_bottom"
+        android:layout_alignParentBottom="true"
         android:padding="@dimen/vpi_padding"
         app:fillColor="@color/vpi_fill_color"
         app:pageColor="@color/vpi_page_color"
@@ -34,4 +29,10 @@
         app:radius="@dimen/vpi_radius"
         app:strokeWidth="@dimen/vpi_stroke_width" />
 
-</LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_above="@+id/view_pager_indicator" />
+
+</RelativeLayout>
