Scale login button text

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,7 +15,7 @@
     <dimen name="logo_top_margin">180dp</dimen>
     <dimen name="button_side_padding">20dp</dimen>
     <dimen name="button_above_below_padding">14dp</dimen>
-    <dimen name="button_font_size">10pt</dimen>
+    <dimen name="button_font_size">18sp</dimen>
     <dimen name="result_pager_height">75dp</dimen>
     <dimen name="instruction_height">84dp</dimen>
     <dimen name="arrow_padding">15dp</dimen>
