--- a/res/layout/login_page_2.xml
+++ b/res/layout/login_page_2.xml
@@ -3,12 +3,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top"
+    android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/login_padding_horizontal"
-    android:paddingRight="@dimen/login_padding_horizontal">
+    android:paddingRight="@dimen/login_padding_horizontal"
+    android:paddingBottom="@dimen/login_padding_vertical">
 
-    <TextView
+<TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
