--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -32,7 +32,6 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:layout_above="@+id/view_pager_indicator" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
