Preserve search results on rotation
* Repopulate search results pager after rotation
* Extracts custom search view class
* Use child fragment manager to preserve pager state after rotation
* Repopulate POI markers on map after rotation

--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -6,7 +6,7 @@
         android:title="@string/search_title"
         android:icon="@drawable/ic_search"
         android:showAsAction="collapseActionView|ifRoom"
-        android:actionViewClass="android.widget.SearchView" />
+        android:actionViewClass="com.mapzen.open.search.PeliasSearchView" />
 
     <item
         android:id="@+id/about"
