--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Mapzen" parent="@android:style/Theme.Holo.Light">
+    <style name="Theme.Mapzen" parent="Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Mapzen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:itemTextAppearance">@style/MapzenItemTextAppearance</item>
