--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.mapzen.open">
 
     <item
         android:id="@+id/search"
         android:title="@string/search_title"
         android:icon="@drawable/ic_search"
-        android:showAsAction="collapseActionView|ifRoom"
-        android:actionViewClass="com.mapzen.open.search.PeliasSearchView" />
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="com.mapzen.open.search.PeliasSearchView" />
 
     <item
         android:id="@+id/about"
