--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -58,4 +58,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ListView
+        android:id="@+id/auto_complete"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="gone" />
+
 </RelativeLayout>
