--- a/res/layout/recent_search_list_header.xml
+++ b/res/layout/recent_search_list_header.xml
@@ -1,28 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/default_padding_horizontal"
-    android:paddingRight="@dimen/default_padding_horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:drawablePadding="8dp"
-        android:fontFamily="sans-serif-condensed"
-        android:paddingTop="@dimen/default_padding_vertical"
-        android:paddingBottom="@dimen/default_padding_vertical"
-        android:textColor="@color/dark_gray"
-        android:textSize="@dimen/small"
-        android:text="@string/recent_searches" />
-
-    <include
-        layout="@layout/divider"
+    <FrameLayout
+        android:id="@+id/recent_search_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom" />
+        android:paddingLeft="@dimen/default_padding_horizontal"
+        android:paddingRight="@dimen/default_padding_horizontal">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:drawablePadding="8dp"
+            android:fontFamily="sans-serif-condensed"
+            android:paddingTop="@dimen/default_padding_vertical"
+            android:paddingBottom="@dimen/default_padding_vertical"
+            android:textColor="@color/dark_gray"
+            android:textSize="@dimen/small"
+            android:text="@string/recent_searches" />
+
+        <include
+            layout="@layout/divider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom" />
+
+    </FrameLayout>
+</LinearLayout>
