--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -9,6 +9,13 @@
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="com.mapzen.open.search.PeliasSearchView" />
 
+    <item
+        android:id="@+id/action_view_all"
+        android:title="@string/view_all"
+        android:icon="@drawable/ic_action_view_all"
+        android:visible="false"
+        app:showAsAction="always" />
+
     <group android:id="@+id/overflow_menu">
 
         <item
