--- a/res/layout/fragment_search_results.xml
+++ b/res/layout/fragment_search_results.xml
@@ -8,22 +8,16 @@
     android:layout_gravity="bottom"
     android:visibility="gone">
 
-    <RelativeLayout
-        android:id="@+id/multi_result_header"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/pagination"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:background="@color/transparent_white"
         android:paddingLeft="@dimen/default_padding_horizontal"
-        android:paddingRight="@dimen/default_padding_horizontal">
-
-        <TextView
-            android:id="@+id/pagination"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:textSize="@dimen/small"
-            android:textColor="@color/dark_gray" />
-    </RelativeLayout>
+        android:paddingRight="@dimen/default_padding_horizontal"
+        android:textSize="@dimen/small"
+        android:textColor="@color/dark_gray" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/results"
