--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -1,48 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/instruction_height"
-    android:orientation="horizontal">
-
-    <ImageButton
-        android:id="@+id/left_arrow"
-        android:src="@drawable/ic_left_arrow"
-        android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/arrow_padding"
-        android:background="@android:color/transparent" />
-
-    <ImageView
-        android:id="@+id/destination_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center_vertical"
-        android:paddingLeft="@dimen/instruction_horizontal_padding"
-        android:src="@drawable/ic_route_destination"
-        android:visibility="gone" />
-
-    <LinearLayout
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
         android:id="@+id/turn_container"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/instruction_horizontal_padding">
+        android:paddingRight="@dimen/default_padding_horizontal">
+
+        <ImageButton
+            android:id="@+id/left_arrow"
+            android:src="@drawable/ic_left_arrow"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/arrow_padding"
+            android:background="@android:color/transparent" />
+
+        <ImageView
+            android:id="@+id/destination_icon"
+            android:layout_width="@dimen/turn_icon_height"
+            android:layout_height="@dimen/turn_icon_height"
+            android:layout_toRightOf="@id/left_arrow"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_route_destination"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/turn_icon"
             android:contentDescription="@string/route_description"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/turn_icon_height"
             android:layout_height="@dimen/turn_icon_height"
-            android:layout_marginTop="@dimen/turn_icon_margin" />
+            android:layout_marginTop="@dimen/turn_icon_margin"
+            android:layout_toRightOf="@id/left_arrow"
+            android:layout_alignParentTop="true" />
 
         <ImageView
             android:id="@+id/turn_icon_after_action"
             android:contentDescription="@string/route_description"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/turn_icon_height"
             android:layout_height="@dimen/turn_icon_height"
             android:layout_marginTop="@dimen/turn_icon_margin"
+            android:layout_toRightOf="@id/left_arrow"
+            android:layout_alignParentTop="true"
             android:visibility="gone" />
 
         <TextView
@@ -53,80 +52,86 @@
             android:layout_marginTop="@dimen/default_padding"
             android:textSize="@dimen/small_2"
             android:textStyle="bold"
-            android:textColor="@color/brown" />
-    </LinearLayout>
+            android:textColor="@color/brown"
+            android:layout_toRightOf="@id/left_arrow"
+            android:layout_alignParentBottom="true" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/full_instruction"
+    <RelativeLayout
+        android:id="@+id/instruction_container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:maxLines="2"
-        android:fontFamily="sans-serif-condensed"
-        android:textAlignment="center"
-        android:textColor="@color/brown"
-        android:textSize="@dimen/medium_2"
-        android:paddingLeft="@dimen/instruction_horizontal_padding" />
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/full_instruction_after_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:maxLines="2"
-        android:fontFamily="sans-serif-condensed"
-        android:textAlignment="center"
-        android:textColor="@color/brown"
-        android:textSize="@dimen/medium_2"
-        android:paddingLeft="@dimen/instruction_horizontal_padding"
-        android:visibility="gone" />
-
-    <LinearLayout
-        android:id="@+id/you_have_arrived"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/instruction_horizontal_padding"
-        android:visibility="gone">
-
-        <TextView
+        <ImageButton
+            android:id="@+id/right_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif-condensed"
-            android:maxLines="1"
-            android:text="@string/you_have_arrived_at"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/medium" />
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_right_arrow"
+            android:paddingLeft="@dimen/arrow_padding"
+            android:paddingRight="@dimen/arrow_padding"
+            android:background="@android:color/transparent" />
 
         <TextView
-            android:id="@+id/destination_banner"
-            android:layout_width="wrap_content"
+            android:id="@+id/full_instruction"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@id/right_arrow"
+            android:gravity="center"
+            android:maxLines="2"
             android:fontFamily="sans-serif-condensed"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="@color/brown"
             android:textSize="@dimen/medium_2" />
-    </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/right_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_right_arrow"
-        android:paddingRight="@dimen/arrow_padding"
-        android:background="@android:color/transparent" />
+        <TextView
+            android:id="@+id/full_instruction_after_action"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@id/right_arrow"
+            android:gravity="center"
+            android:maxLines="2"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/brown"
+            android:textSize="@dimen/medium_2"
+            android:visibility="gone" />
 
-</LinearLayout>
+        <LinearLayout
+            android:id="@+id/you_have_arrived"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/right_arrow"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/instruction_horizontal_padding"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-condensed"
+                android:maxLines="1"
+                android:text="@string/you_have_arrived_at"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/medium" />
+
+            <TextView
+                android:id="@+id/destination_banner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-condensed"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/medium_2" />
+        </LinearLayout>
+    </RelativeLayout>
+</merge>
