--- a/res/layout-land/route_preview.xml
+++ b/res/layout-land/route_preview.xml
@@ -4,102 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:id="@+id/top_row"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/route_preview_top_padding"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:background="@color/transparent_white">
-
-        <ImageButton
-            android:id="@+id/route_reverse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/reverse"
-            android:src="@drawable/ic_switch" />
-
-        <LinearLayout
-            android:id="@+id/start_location_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/route_reverse"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/from_text"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@color/dark_gray"
-                android:textSize="@dimen/small"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginRight="4dp"
-                android:text="@string/from_text"
-                android:fontFamily="sans-serif-condensed" />
-
-            <ImageView
-                android:id="@+id/starting_location_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:src="@drawable/ic_locate" />
-
-            <TextView
-                android:id="@+id/starting_point"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@color/brown"
-                android:textSize="@dimen/medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/destination_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/route_reverse"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/to_text"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@color/dark_gray"
-                android:textSize="@dimen/small"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginRight="4dp"
-                android:text="@string/to_text"
-                android:fontFamily="sans-serif-condensed" />
-
-            <ImageView
-                android:id="@+id/destination_location_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:src="@drawable/ic_locate"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/destination"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@color/brown"
-                android:textSize="@dimen/medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed" />
-        </LinearLayout>
-    </RelativeLayout>
+    <include layout="@layout/route_header" />
 
     <LinearLayout
         android:id="@+id/routing_options"
