small style tweaks and icon replacements

--- a/res/layout/direction_list_item.xml
+++ b/res/layout/direction_list_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center_vertical"
+        android:drawablePadding="8dp"
         android:contentDescription="@string/route_description" />
 
     <TextView
