--- a/res/layout/full_results_list.xml
+++ b/res/layout/full_results_list.xml
@@ -4,5 +4,6 @@
         android:id="@android:id/list"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:padding="8dp"
         android:divider="@drawable/list_divider"
         android:dividerHeight="1px" />
