--- a/res/drawable/ic_start.xml
+++ b/res/drawable/ic_start.xml
@@ -2,5 +2,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/ic_start_pressed" />
-    <item android:drawable="@drawable/ic_start" />
+    <item android:drawable="@drawable/ic_start_normal" />
 </selector>
