--- a/res/layout-land/route_preview.xml
+++ b/res/layout-land/route_preview.xml
@@ -49,7 +49,7 @@
 
     <ImageButton
         android:id="@+id/routing_circle"
-        android:src="@drawable/ic_car_start"
+        android:src="@drawable/ic_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
