Use new autocomplete icons and cleanup list header divider.

--- a/res/layout/fragment_direction_list.xml
+++ b/res/layout/fragment_direction_list.xml
@@ -10,7 +10,7 @@
     
     <include layout="@layout/route_header" />
 
-    <include layout="@layout/divider"
+    <include layout="@layout/list_header_divider"
         android:id="@+id/location_divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
