--- a/res/layout/full_results_list_header.xml
+++ b/res/layout/full_results_list_header.xml
@@ -20,7 +20,7 @@
         android:textSize="@dimen/small" />
 
     <include
-        layout="@layout/divider"
+        layout="@layout/list_header_divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
