--- a/res/layout-land/route_preview.xml
+++ b/res/layout-land/route_preview.xml
@@ -17,7 +17,7 @@
         android:divider="@color/dark_gray">
 
         <include
-            layout="@layout/divider"
+            layout="@layout/list_header_divider"
             android:id="@+id/location_divider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
