Center vertical route start icon in preview header

--- a/res/layout-land/route_header.xml
+++ b/res/layout-land/route_header.xml
@@ -50,6 +50,7 @@
             android:id="@+id/starting_location_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="4dp"
             android:src="@drawable/ic_locate" />
 
