switch icon for landscape

--- a/res/layout-land/route_header.xml
+++ b/res/layout-land/route_header.xml
@@ -23,7 +23,7 @@
             android:layout_marginLeft="8dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/reverse"
-            android:src="@drawable/ic_switch" />
+            android:src="@drawable/ic_switch_h" />
     </LinearLayout>
 
     <LinearLayout
