search pager text styles and overflow menu text

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -40,6 +40,7 @@
 
     <!-- fonts -->
     <dimen name="big">32sp</dimen>
+    <dimen name="big_2">28sp</dimen>
     <dimen name="medium_2">24sp</dimen>
     <dimen name="medium">21sp</dimen>
     <dimen name="small_2">18sp</dimen>
