--- a/res/layout/route_header.xml
+++ b/res/layout/route_header.xml
@@ -90,6 +90,7 @@
                 android:id="@+id/destination_location_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_locate"
                 android:visibility="gone" />
             <TextView
