--- a/res/layout/route_header.xml
+++ b/res/layout/route_header.xml
@@ -47,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="4dp"
                 android:src="@drawable/ic_locate" />
 
             <TextView
@@ -91,8 +92,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="4dp"
                 android:src="@drawable/ic_locate"
                 android:visibility="gone" />
+
             <TextView
                 android:id="@+id/destination"
                 android:maxLines="1"
